src/main/java/com/example/backstudy24/Error/requestError/BusinessException.java
package com.example.backstudy24.Error.requestError;


import com.example.backstudy24.Error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException{

    private final ErrorCode errorCode;

    public BusinessException(String message, ErrorCode errorCode) {
        super(message);
        this.errorCode = errorCode;
    }
}